[tool.poetry]
name = "rfind-web"
version = "0.1.0"
description = ""
authors = ["Nicholas Bruce <nsbruce@uvic.ca>"]
readme = "README.md"
packages = [{include = "rfind_web"}]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.4"
python-socketio = "^5.6.0"
websocket-client = "^1.3.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.3.0"
mypy = "^0.960"
pytest = "^7.1.2"
Flake8-pyproject = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = "py39"
preview="True"

[tool.isort]
profile="black"

[tool.mypy]
python_version = 3.9

[tool.pytest.ini_options]
testpaths = "tests"

[tool.flake8]
ignore = ['E203']
max-line-length = 88